alignment fix

--- a/pamoka27/styles/uzduotis1.css
+++ b/pamoka27/styles/uzduotis1.css
@@ -1,8 +1,19 @@
 body {
-  font-size: 32px;
-  font-weight: bold;
-  margin: 0 auto;
-  text-align: center;
-  color: #fff;
-  background: #000015;
-}/*# sourceMappingURL=uzduotis1.css.map */
+    font-size: 28px;
+    font-weight: bold;
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+    color: #fff;
+    background: #000015;
+}
+
+form {
+    font-size: 16px;
+}
+
+div {
+    width: 65%;
+    margin: 0 auto;
+    text-align: left;
+} /*# sourceMappingURL=uzduotis1.css.map */
